# pacifist

./: .gitignore  CMakeLists.txt  README.md  cfg.py  credits.txt
cmake/: FetchCPM.cmake  Findarxengine.cmake  ProjectInstaller.cmake  ProjectVersion.cmake
concepts/: buttons.aseprite  scene2.aseprite  scene_2_new.aseprite  start.aseprite  waterScene.ase
include/: CheckBox.h  Config.h  FontManager.h  ImageManager.h  PacifistGame.h  PacifistGameWindow.h  Player.h
libs/: ProjectLibs.cmake
rc/: pacifist.rc  resource.h
resources/: BuildingAssets.aseprite  scene2.aseprite  start.aseprite
src/: CheckBox.cpp  Config.cpp  FontManager.cpp  ImageManager.cpp  PacifistGame.cpp  PacifistGameWindow.cpp  Player.cpp
